Clean up logic in pickup_requests views

--- a/app/views/pickup_requests/_form.html.erb
+++ b/app/views/pickup_requests/_form.html.erb
@@ -27,7 +27,7 @@
 
 <div class="field">
     <%= form.label :payment_amount %>
-    <%= form.number_field :payment_amount, :class => "form-field" %>
+    <%= form.number_field :payment_amount, in: 1.0..200.0, step: 0.05, :class => "form-field" %>
 </div>
 
 <br>
