--- a/app/views/pickup_requests/show.html.erb
+++ b/app/views/pickup_requests/show.html.erb
@@ -30,7 +30,7 @@
 
       <p>
       <strong>Payment:</strong> $
-      <%= @pickup_request.price_in_dollars %>
+      <%= @pickup_request.payment_amount %>
     </p>
 
     <p>
@@ -43,34 +43,51 @@
 <%#= google_map_image_tag_partial(@pickup_request.delivery_address) %>
     <%#= render 'charge_form', pickup_request: @pickup_request, user: current_user %><br>
 
-<% if !@pickup_request.user_to_pickup.present? %>
-  <div class="btn">
-    <%= link_to 'Accept Request', accept_pickup_request_path, method: :patch %>
+<% if !@same_user && !@pickup_accepted %>
+    <div class="btn">
+      <%= link_to 'Accept Request', accept_pickup_request_path, method: :patch %>
+    </div>
+
+  <% elsif !@same_user && @pickup_accepted %>
+    <div class="btn">Request Unavailable</div>
+
+  <% elsif @same_user && !@pickup_accepted %>
+    <div class="btn" id="destroy">
+      <%= link_to 'Delete Request', pickup_request_path, method: :delete %>
+    </div>
+
+  <% else @same_user && @pickup_accepted %>
+    <div class="btn">
+      <%= link_to 'Reset Request', unaccept_pickup_request_path, method: :delete %>
+    </div>
+<% end %>
+
+<br>
+
+<% if @same_user %>
+  <div type="button" class="btn">
+    <%= link_to 'View Conversations', conversations_path({ :pickup_request_id => @pickup_request}) %> 
   </div>
 
-  <% elsif current_user != @pickup_request.user && @pickup_request.user_to_pickup.present? %>
-  <div class="btn">Request Unavailable</div>
-
-  <% else current_user == @pickup_request.user && @pickup_request.user_to_pickup.present? %>
-  <div class="btn">
-    <%= link_to 'Reset Request', unaccept_pickup_request_path, method: :delete %>
-  </div>
-  <% end %>
-
-  <br>
-
+<% else %>
   <div type="button" class="btn">
     <%= link_to 'Send Message', conversations_path({ :pickup_request_id => @pickup_request} ), method: :create %> 
   </div>
-  <br>
+
+<% end %>
+
+<br>
+
   <div type="button" class="btn">
     <%= link_to 'View All Pick-Up Requests', pickup_requests_path %>
   </div>
-  <br>
+
+<br>
   
-    <% if policy(@pickup_request).edit? %>
-    <div type="button" class="btn">
-      <%= link_to 'Edit Request', edit_pickup_request_path %><br>
-    </div>
-    <% end %>
-    <br>
+<% if policy(@pickup_request).edit? %>
+  <div type="button" class="btn">
+    <%= link_to 'Edit Request', edit_pickup_request_path %><br>
+  </div>
+<% end %>
+
+<br>
