--- a/app/views/pickup_requests/_charge_form.html.erb
+++ b/app/views/pickup_requests/_charge_form.html.erb
@@ -1,18 +1,19 @@
-    <%= form_tag charge_pickup_request_path(request) do %>
-          <article>
-            <% if flash[:error].present? %>
-              <div id="error_explanation">
-                <p><%= flash[:error] %></p>
-              </div>
-            <% end %>
-          </article>
-
-          <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="<%= request.description %>"
-          data-amount="<%= request.payment_amount %>"
-          data-currency="AUD"
-          data-email=<%= request.user.email %>
-          data-locale="auto"></script>
-          
+<%= form_tag charge_pickup_request_path(request) do %>
+  <article>
+    <% if flash[:error].present? %>
+      <div id="error_explanation">
+        <p><%= flash[:error] %></p>
+      </div>
     <% end %>
+  </article>
+
+  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+    data-description="Payment for: <%= request.user_to_pickup.user.profile.full_name %>"
+    data-amount="<%= request.payment_amount * 100 %>"
+    data-currency="AUD"
+    data-label="Pay <%= request.user_to_pickup.user.profile.full_name %>"
+    data-email=<%= request.user.email %>
+    data-locale="auto">
+  </script>
+<% end %>
