Add update to readme

--- a/app/views/pickup_requests/_form.html.erb
+++ b/app/views/pickup_requests/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: @pickup_request, class: "form",) do |form| %>
 
   <div class="field">
-    <strong><%= form.label :item_name %></strong>
+    <strong><%= form.label :item_name %></strong><br>
     <%= form.text_field :item_name, :class => "form-field" %>
   </div>
   <br>
