--- a/app/views/accept_request_mailer/accept_request.text.erb
+++ b/app/views/accept_request_mailer/accept_request.text.erb
@@ -1,4 +1,8 @@
 You have accepted new request!
 
+Please visit the below link to view the request details:
+
+<%= link_to 'View Request', pickup_requests_url(@pickup_request) %>
+
 from: <%= @user.email %>
 
