--- a/app/views/pickup_requests/show.html.erb
+++ b/app/views/pickup_requests/show.html.erb
@@ -65,12 +65,12 @@
 
 <% if @same_user %>
   <div type="button" class="btn">
-    <%= link_to 'View Conversations', conversations_path({ :pickup_request_id => @pickup_request}) %> 
+    <%= link_to 'View Conversations', conversations_path({ pickup_request_id: @pickup_request}) %> 
   </div>
 
 <% else %>
   <div type="button" class="btn">
-    <%= link_to 'Send Message', conversations_path({ :pickup_request_id => @pickup_request} ), method: :create %> 
+    <%= link_to 'Send Message', conversations_path({ pickup_request_id: @pickup_request} ), method: :create %> 
   </div>
 
 <% end %>
