--- a/app/views/pickup_requests/index.html.erb
+++ b/app/views/pickup_requests/index.html.erb
@@ -25,6 +25,7 @@
             <%= google_map_image(@pickup_request = pickup) %><br>
             <p><strong>Delivery Address: </strong><%= pickup.delivery_address %></p>
             <p><strong>Payment: </strong>$<%= pickup.payment_amount %></p>
+            <p><strong>Posted By: </strong><%= link_to pickup.user.profile.full_name, profile_path(pickup.user.profile) %></p>
             <%= link_to 'View Request', pickup_request_path(pickup) %><br>
         </div>
 
